--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,15 @@
+<div class="container">
+<div style="background: #e9ecef" class="p-5">
+  <h1>
+    You are from: 
+  </h1>
+  </div>
 <h2>User wizard</h2>
 
 <%= link_to "Create a user", step1_wizard_path, class: 'btn btn-success' %>
+</div>
+
+
+ <h1><%= puts @address %></h1>
+
+<br>
