--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
 <div style="background: #e9ecef" class="p-5">
   <h1>
-    You are from: <%= @region["city"] %>
+    We have plans in <%= @city %>!
+    
   </h1>
   </div>
 <h2>User wizard</h2>
