--- a/app/views/wizards/step2.html.erb
+++ b/app/views/wizards/step2.html.erb
@@ -1,3 +1,6 @@
+<h1>
+   your zipcode is <%= @user_wizard.zip_code %>
+</h1>
 <ol class="breadcrumb">
   <li><%= link_to "Step 1", step1_wizard_path %></li>
   <li class="active">Step 2</li>
