--- a/app/views/wizards/step2.html.erb
+++ b/app/views/wizards/step2.html.erb
@@ -1,19 +1,22 @@
-<h1>
-   your zipcode is <%= @user_wizard.zip_code %>
+<div class="container pt-5">
+  <h1 class="text-center">
+   We have fantastic plans in <%= @user_wizard.zip_code %>!
 </h1>
-<ol class="breadcrumb">
-  <li><%= link_to "Step 1", step1_wizard_path %></li>
-  <li class="active">Step 2</li>
-  <li>Step 3</li>
-  <li>Step 4</li>
-</ol>
+  <div class="p-5">
+<div class="progress">
+  <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+</div>
+  </div>
 
 <%= simple_form_for @user_wizard, as: :user_wizard, url: validate_step_wizard_path do |f| %>
+<div class="form-group">
   <%= f.error_notification %>
 
   <%= hidden_field_tag :current_step, 'step2' %>
   <%= f.input :first_name %>
   <%= f.input :last_name %>
 
-  <%= f.submit 'Continue' %>
+  <%= f.submit 'Continue', class: 'btn btn-primary' %>
+</div>
 <% end %>
+</div>
