--- a/app/views/wizards/step4.html.erb
+++ b/app/views/wizards/step4.html.erb
@@ -1,9 +1,12 @@
-<ol class="breadcrumb">
-  <li><%= link_to "Step 1", step1_wizard_path %></li>
-  <li><%= link_to "Step 2", step2_wizard_path %></li>
-  <li><%= link_to "Step 3", step3_wizard_path %></li>
-  <li class="active">Step 4</li>
-</ol>
+<div class="container pt-5">
+  <h1 class="text-center">
+   We have fantastic plans in <%= @user_wizard.zip_code %>!
+</h1>
+  <div class="p-5">
+<div class="progress">
+  <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+</div>
+  </div>
 
 <%= simple_form_for @user_wizard, as: :user_wizard, url: validate_step_wizard_path do |f| %>
   <%= f.error_notification %>
